# syropod_highlevel_controller

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  hexapod.rviz  hexapod_parameters.yaml  large_hexapod.yaml  lobsang.yaml  package.xml  readme.md  shc_config.in.h
cmake/: clang-tidy.cmake  compilerSetup.cmake
config/: auto_pose.yaml  default.yaml  dynamic_parameter.cfg  flexipod.yaml  gait.yaml  large_hexapod.yaml  large_hexapod.yaml~  large_hexapod_new.yaml  lobsang.yaml  max.yaml  readme.md  readme.txt
include/simple_hexapod_controller/: controller.h  debugOutput.h  debug_output.h  dynamixelMotorInterface.h  dynamixelProMotorInterface.h  impedanceControl.h  impedanceController.h  impedance_controller.h  imu.h  imuCompensation.h  model.h  motorInterface.h  parametersAndStates.h  parameters_and_states.h  pose.h  poseController.h  pose_controller.h  quat.h  standardIncludes.h  standard_includes.h  stateController.h  state_controller.h  tripodWalk.h  walkController.h  walk_controller.h
include/syropod_highlevel_controller/: admittance_controller.h  debug_output.h  debug_visualiser.h  impedance_controller.h  model.h  parameters_and_states.h  pose.h  pose_controller.h  quat.h  standard_includes.h  state_controller.h  walk_controller.h
launch/: .simple_large_hexapod_gazebo.launch.swp  default_rviz.launch  flexipod.yaml  flexipod.yaml~  gait.yaml  large_hexapod.yaml  lobsang.yaml  simple_flexipod_gazebo.launch  simple_flexipod_rviz.launch  simple_flexipod_rviz.launch~  simple_large_hexapod.launch  simple_large_hexapod_gazebo.launch  simple_large_hexapod_gazebo_max_tf.launch  simple_large_hexapod_rviz.launch  simple_lobsang_gazebo.launch  simple_lobsang_rviz.launch  simple_max.launch  simple_max_gazebo.launch  simple_max_rviz.launch
msg/: LegState.msg  TargetTipPose.msg  TipState.msg  legState.msg
rviz_cfg/: SHC_display.rviz  hexapod.rviz
src/: admittance_controller.cpp  debugOutput.cpp  debug_output.cpp  debug_visualiser.cpp  dynamixelMotorInterface.cpp  dynamixelProMotorInterface.cpp  impedanceControl.cpp  impedanceController.cpp  impedance_controller.cpp  imuCompensation.cpp  jacobian.cpp  main.cpp  main.cpp~  model.cpp  motorInterface.cpp  poseController.cpp  pose_controller.cpp  simpleDiagnostics.cpp  stateController.cpp  state_controller.cpp  tripodWalk.cpp  walkController.cpp  walk_controller.cpp
