<?xml version="1.0"?>
<package>

  <name>syropod_highlevel_controller</name>
  <version>0.5.10</version>
  <description>The syropod_highlevel_controller package</description>

  <maintainer email="fletcher.talbot@csiro.au">tal058</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
