<?xml version="1.0"?>
<package format="2">

  <name>syropod_highlevel_controller</name>
  <version>0.0.0</version>
  <description>Highlevel controller for CSIRO Syropods (multi-legged robots)</description>

  <maintainer email="shc-support@csiro.au"></maintainer>

  <license>CSIRO Open Source Software Licence Agreement (Ref: LICENSE file)</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
